# AI-4-Alzheimer-s

./: README.md
project/: .gitignore  QUICKSTART.md  README.md  SETUP.md  package-lock.json
project/MedGemma_DeepMind/: QUICKSTART.md  README.md  SETUP.md  package-lock.json
project/MedGemma_DeepMind/application/: README.md  pyproject.toml  requirements.txt  run_backend.bat  run_backend.sh  run_frontend.sh
project/MedGemma_DeepMind/application/back/: back_chat.py  back_irm_analysis.py  back_report.py  back_segmentation.py
project/MedGemma_DeepMind/application/front/: package.json
project/MedGemma_DeepMind/application/front/app/report/[patient]/: page.tsx
project/MedGemma_DeepMind/application/front/public/mri/: slice.py
project/MedGemma_DeepMind/nnunet-inference/: README.md  test_remote_endpoint.py
project/MedGemma_DeepMind/rag_medgemma/: complete_rag_db.py  main.py
project/MedGemma_DeepMind/rapport/: generate_report.py  lesion_report_improved.html  pyproject.toml
project/application/: README.md  run_frontend.bat
project/application/back/: back.py  back_chat_citations.py  back_environment.py  back_get_rag_metadata.py
project/application/front/: package-lock.json
project/application/front/app/: layout.tsx  page.tsx
project/application/front/app/chat/[patient]/: page.tsx
project/application/front/public/report/: report.html  report.json
project/medgemma/: README.md  get_references_from_rag_db.py
project/nnunet-train/: longitudinal_analysis.py  quantitative_analysis.py
project/rapport/: main.py
(+1 files in other folders)
