[project]
name = "application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform>=1.101.0",
    "google-cloud-storage>=2.19.0",
    "nibabel>=5.3.2",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.0",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
]
